# lolalytico

./: .gitignore  API.md  API_DOCUMENTATION.md  README.md  pyproject.toml  requirements.txt
.github/workflows/: publish.yml  testing.yml
lolalytico/: __init__.py  main.py
src/lolalytics-api/: __init__.py
src/lolalytics_api/: __init__.py  main.py
tests/: test_main.py
