[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "lolalytics-api"
version = "0.0.6"
authors = [
  { name = "Max Tretikov" }
]
description = "Unofficial Lolalytics scraper"
readme = "README.md"
requires-python = ">=3.6"
dependencies = [
    "aiohttp",
    "lxml"
]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Topic :: Games/Entertainment",
    "Topic :: Internet :: WWW/HTTP :: Dynamic Content",
]
license = { text = "MIT" }

[project.optional-dependencies]
test = [
    "pytest",
    "pytest-asyncio"
]

[project.urls]
Homepage = "https://github.com/maxstidbits/lolalytics-api"
Repository = "https://github.com/maxstidbits/lolalytics-api"
Issues = "https://github.com/maxstidbits/lolalytics-api/issues"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-dir]
"" = "src"
